# Wiki

./: .gitignore  ARCHITECTURE.md  README.md
techwiki/: index.html  package.json  tsconfig.json  vite.config.ts
techwiki/src/: App.tsx
techwiki/src-tauri/: Cargo.toml  tauri.conf.json
techwiki/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
techwiki/src/components/ui/: Button.tsx  Input.tsx
techwiki/src/pages/: ExercisesPage.tsx  HomePage.tsx  MindMapPage.tsx  SearchPage.tsx  SnippetsPage.tsx  TroubleshootingPage.tsx  WikiPage.tsx
techwiki/src/stores/: wikiStore.ts
techwiki/src/styles/: globals.css
